Lab04/milan.iso-ebnf.txt
program = "begin", statementList, "end";

statementList = [statement,";",statementList];

statement = ident, ":=", logicalOrExpr
  | "if", logicalOrExpr, "then", statementList, ["else", statementList], "fi"
  | "while", logicalOrExpr, "do", statementList, "od"
  | "write", "(", logicalOrExpr, ")"
;

factor = ident | number | "(", logicalOrExpr, ")" | "-", factor | "!", factor | "read";
term = factor, { mulop, factor };
expression = term, { addop, term };
relation = expression, [ cmp, expression ];
equalityExpr = relation, [ eq, relation ];
bitwiseAndExpr = equalityExpr, { "&", equalityExpr};
bitwiseOrExpr = bitwiseAndExpr, { "|", bitwiseAndExpr };
logicalAndExpr = bitwiseOrExpr, { "&&", bitwiseOrExpr };
logicalOrExpr = logicalAndExpr, { "||", logicalAndExpr };

unaryop = "!";
mulop = "*" | "/";
addop = "+" | "-";
eq = "=" | "!=";
cmp = "<" | "<=" | ">" | ">=";



ident = letter, { letter | digit };

letter = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z";

digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";
